force-app/main/default/objects/BMCServiceDesk__Suggested_Owner_Mapping__c/BMCServiceDesk__Suggested_Owner_Mapping__c.object-meta.xml
<CustomObject>
    <description>This object will capture Suggested staff / queue mapping</description>
    <label>Suggested Owner Mapping</label>
    <nameField>
        <label>Suggestion Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suggested Owner Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>