force-app/main/default/objects/BMCServiceDesk__Suggested_Owner_Mapping__c/fields/BMCServiceDesk__Assigned_Queue__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Assigned_Queue__c</fullName>
    <description>Stores the ID of the queue that is automatically assigned to a record based on the defined conditions.</description>
    <label>Assigned Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>