force-app/main/default/objects/BMCServiceDesk__Suggested_Owner_Mapping__c/fields/BMCServiceDesk__Criteria_Advanced_Expression__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Criteria_Advanced_Expression__c</fullName>
    <label>Criteria Advanced Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>