force-app/main/default/objects/BMCServiceDesk__Suggested_Owner_Mapping__c/fields/BMCServiceDesk__Inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active / Inactive Criteria</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>