force-app/main/default/objects/BMCServiceDesk__Suggested_Owner_Mapping__c/fields/BMCServiceDesk__Postfix_Criteria_Advanced_Expression__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Postfix_Criteria_Advanced_Expression__c</fullName>
    <description>This captures post fix expression for criteria for owner mapping</description>
    <label>Postfix Criteria Advanced Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>