force-app/main/default/objects/BMCServiceDesk__Suggested_Owner_Mapping__c/fields/BMCServiceDesk__Suggested_Queue__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Suggested_Queue__c</fullName>
    <description>Comma separated SF Id&apos;s for selected queues</description>
    <label>Suggested Queue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>