force-app/main/default/objects/BMCServiceDesk__Suggested_Owner_Mapping__c/fields/BMCServiceDesk__Suggested_Staff__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Suggested_Staff__c</fullName>
    <description>Comma separated SFId&apos;s for selected users</description>
    <label>Suggested Staff</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>