force-app/main/default/objects/BMCServiceDesk__Suggested_Owner_Mapping__c/validationRules/BMCServiceDesk__NameUniqueCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__NameUniqueCheck</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Suggested_Owner_Mapping__c.Fields.Name, $ObjectType.BMCServiceDesk__Suggested_Owner_Mapping__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__Suggested_Owner_Mapping__c.Fields.Name, $ObjectType.BMCServiceDesk__Suggested_Owner_Mapping__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
    <errorMessage>A record with this Suggestion Title already exists. Enter unique Suggestion Title.</errorMessage>
</ValidationRule>